# Rufuf

./: .gitignore  Cargo.toml  flake.nix  log_file
src/: lib.rs  main.rs  term_buffer.rs  tools.rs
src/cl/: display.rs  events.rs  fs_entries.rs  mod.rs
src/cli/: app.rs  buffer.rs  events.rs  fs_entries.rs  fslist.rs  mod.rs  panel.rs  tabs.rs
src/cli/widgets/: mod.rs  show_image.rs
src/config/: mod.rs
src/config/default/: colors.lua
src/misc/: rgb.rs
