[package]
name = "rufuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.3"
itertools = "0.13.0"
ratatui = {version = "0.28.0", features= ["termion"]}
# termion = "4.0.0"
tokio = {version = "1.37.0",features = ["full"]}
file-logger = {path="../file-logger"}
mlua = {version = "0.9.8", features =["lua52", "vendored"] }
num_vector = "0.1.0"
easy-hex = "1.0.0"
swift_vec = "0.4.1"
generic-array = "1.1.0"
derivative = "2.2.0"
image = "0.25.2"
ratatui-image = "1.0.5"
